--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "google_clone_nextjs_project": "file:",
     "html-react-parser": "^5.1.10",
     "next": "14.1.3",
     "react": "^18",
